--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "mpvue": "^1.0.11",
     "vuex": "^3.0.1",
+    "wafer2-client-sdk": "^1.1.3",
     "weui-distpicker": "^0.1.1"
   },
   "devDependencies": {
