--- a/project.config.json
+++ b/project.config.json
@@ -1,7 +1,7 @@
 {
 	"description": "项目配置文件。",
 	"setting": {
-		"urlCheck": false,
+		"urlCheck": true,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
@@ -11,7 +11,7 @@
 	"qcloudRoot": "./server/",
 	"compileType": "miniprogram",
 	"appid": "wx700e95bc59b771d6",
-	"projectname": "su_home",
+	"projectname": "soul_home",
 	"condition": {
 		"search": {
 			"current": -1,
